compliance/00-clearing-house-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clearing-house
  labels:
    name: clearing-house
---
