compliance/20-compliance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compliance
  namespace: clearing-house
  labels:
    app: compliance
spec:
  selector:
    matchLabels:
      app: compliance
  replicas: 1
  template:
    metadata:
      labels:
        app: compliance
    spec:
      containers:
      - name: compliance
        image: registry.gitlab.com/gaia-x/lab/compliance/gx-compliance:${IMAGETAG_COMPLIANCE}
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 15
          initialDelaySeconds: 15
          failureThreshold: 10
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 15
          initialDelaySeconds: 15
          failureThreshold: 10
          successThreshold: 1
        volumeMounts:
          - name: shared-folder
            mountPath: /usr/src/app/static/.well-known
        ports:
        - containerPort: 3000
          name: compliance-http
      volumes:
      - name: shared-folder
        emptyDir: {}        
      - name: compliance-init
        configMap:
          name: compliance-init
          items:
            - key: init.js
              path: init.js
      restartPolicy: Always
---
