compliance/25-compliance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compliance-service
  namespace: clearing-house
spec:
  selector:
    app: compliance
  type: ClusterIP
  ports:
  - name: compliance
    protocol: TCP
    port: 3000
    targetPort: 3000
---
