compliance/35-memgraph-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compliance-memgraph-service
  namespace: clearing-house
spec:
  selector:
    app: compliance-memgraph
  type: ClusterIP
  ports:
  - name: compliance-memgraph
    protocol: TCP
    port: 7687
    targetPort: 7687
---
