compliance/30-compliance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compliance-ingress
  namespace: clearing-house
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
  - host: compliance.${PUBLIC_NODE_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: compliance-service
            port:
              number: 3000
---
